@@ -7,7 +7,7 @@
 
 
 
-                  WikiTeX 1.3.2.2  LICENSE
+                  WikiTeX 1.3.2.3  LICENSE
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
