@@ -7,7 +7,7 @@
 
 
 
-                  WikiTeX 1.3.2.1 MANIFEST
+                  WikiTeX 1.3.2.3 MANIFEST
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -61,7 +61,7 @@
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
 
@@ -127,6 +127,6 @@ sion.
 
 
 
-                      6 September 2004
+                      7 September 2004
 
 
