@@ -7,7 +7,7 @@
 
 
 
-                   WikiTeX 1.3.2.2 README
+                   WikiTeX 1.3.2.3 README
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
@@ -73,27 +73,33 @@
 
 
 
-                   WikiTeX 1.3.2.2 README
+                   WikiTeX 1.3.2.3 README
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
                      Table of Contents
 
 
-Introduction . . . . . . . . . . . . . . . . . . . . . .   1
-Acquisition  . . . . . . . . . . . . . . . . . . . . . .   1
-Installation . . . . . . . . . . . . . . . . . . . . . .   1
-Expansion  . . . . . . . . . . . . . . . . . . . . . . .   2
-Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
+1. Introduction  . . . . . . . . . . . . . . . . . . . .   1
+2. Acquisition . . . . . . . . . . . . . . . . . . . . .   1
+3. Installation  . . . . . . . . . . . . . . . . . . . .   1
+     3.1. Stand-alone distribution . . . . . . . . . . .   2
+     3.2. Pre-packaged distribution  . . . . . . . . . .   2
+4. Expansion . . . . . . . . . . . . . . . . . . . . . .   3
+5. Copyright . . . . . . . . . . . . . . . . . . . . . .   4
 
 1.  Introduction
 
-          WikiTeX  repackages  MediaWiki  with  support  for
-     extensible LaTeX objects; for details, please visit:
+          WikiTeX extends MediaWiki by allowing  authors  to
+     manipulate  LaTeX  objects  directly in their articles;
+     support so far includes: math, music, chess, chemistry,
+     phonetics, go, Greek and Feynman diagrams; SVG and Gnu-
+     Plot are foreseen.  To see WikiTeX  in  action,  please
+     visit:
 
-          http://wikisophia.org/wiki/Wikitex
+          http://wikisophia.org
 
-     WikiTeX'   versio   maiora  will  reflect  MediaWiki's;
+          WikiTeX'  versio  maiora will reflect MediaWiki's;
      minora, however, our proper mutations.
 
 2.  Acquisition
@@ -107,22 +113,16 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
      Alternatively,  WikiTeX comes prepackaged with the lat-
      est MediaWiki; see:
 
-          http://wikisophia.org/wikitex
+          http://wikitex.org
 
 3.  Installation
 
-          In addition to sucessfully configuring  MediaWiki,
-     installation  consists  of  these  threefold steps; and
-     assumes some familiarity with httpd:
+          Depending on your distribution,  installation  may
+     consist of three or more steps; and assumes some famil-
+     iarity with httpd.
 
-          1.   Render /extensions/wikitex/tmp  scribable  to
-               the web server, but beware to disable script-
-               ing.
-
-
-
-
-
+          Each method below presupposes a succesful  instal-
+     lation of MediaWiki.
 
 
 
@@ -136,16 +136,39 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
                              -2-
 
 
-          2.   Verify that ImageMagick (imagemagick.org)  is
-               present,    and    acquire    Norman   Gray's
+     3.1.  Stand-alone distribution
+
+               In  addition  to  the steps detailed for pre-
+          packaged distributions, perform these twain:
+
+          1.   Create  the  directory   /extensions/wikitex;
+               copy there the distribution files; create the
+               directory /extensions/wikitex/tmp.
+
+          2.   Add the following line to  /LocalSettings.php
+               lastly before the terminal '?>':
+
+               include './extensions/wikitex/wikitex.php';
+
+               You may now continue  with  normal  installa-
+          tion.
+
+     3.2.  Pre-packaged distribution
+
+          1.   Render  /extensions/wikitex/tmp  scribable to
+               the web server, but beware to disable script-
+               ing.
+
+          2.   Verify  that ImageMagick (imagemagick.org) is
+               present,   and    acquire    Norman    Gray's
                dvi2bitmap:
 
           http://astro.gla.ac.uk/users/norman/star/dvi2bitmap
 
                Run ./configure with the --enable-gif option.
 
-          3.   Install as many of the following LaTeX  pack-
-               ages  as  you  would  like to support, or add
+          3.   Install  as many of the following LaTeX pack-
+               ages as you would like  to  support,  or  add
                your own (see Expanding WikiTeX):
 
      Class    Package          Author              URL
@@ -164,29 +187,6 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
      xym    XyMTeX       Shinsaku Fujita      kit.ac.jp
 
 
-4.  Expanding WikiTeX
-
-          Adding novel packages to WikiTeX can  be  achieved
-     in  several  discrete  steps; after you have downloaded
-     and installed the package:
-
-          1.   Devise a class name for the package, and  add
-               a  template  to  /extensions/wikitex  in this
-               form:
-
-                    wikitex.<classname>.inc.<ext>
-
-               The template should expose  said  package  to
-               the  renderer;  see the current templates for
-               examples.
-
-          2.   Unless the class requires  non-standard  pro-
-               cessing  (confer  Lilypond's  midi),  skip to
-               step three; else, add the  new  functionality
-               to nLatex() in wikitex.sh.
-
-               Consult wikitex.sh for examples.
-
 
 
 
@@ -202,35 +202,35 @@ Copyright  . . . . . . . . . . . . . . . . . . . . . . .   4
                              -3-
 
 
-          3.   Lastly,  if  the package contains undesirable
+4.  Expanding WikiTeX
+
+          Adding  novel  packages to WikiTeX can be achieved
+     in several discrete steps; after  you  have  downloaded
+     and installed the package:
+
+          1.   Devise  a class name for the package, and add
+               a template  to  /extensions/wikitex  in  this
+               form:
+
+                    wikitex.<classname>.inc.<ext>
+
+               The  template  should  expose said package to
+               the renderer; see the current  templates  for
+               examples.
+
+          2.   Unless  the  class requires non-standard pro-
+               cessing (confer  Lilypond's  midi),  skip  to
+               step  three;  else, add the new functionality
+               to nLatex() in wikitex.sh.
+
+               Consult wikitex.sh for examples.
+
+          3.   Lastly, if the package  contains  undesirable
                or insecure directives, add them to:
 
                     objRend::strPost()::arrBlack[<class>]
 
                in wikitex.php; the which see for details.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
