@@ -7,7 +7,7 @@
 
 
 
-                    WikiTeX 1.3.2.2 NEWS
+                    WikiTeX 1.3.2.3 NEWS
 
       Peter Danenberg <danenberg at mitdasein dot com>
 
